--- a/netlify.toml
+++ b/netlify.toml
@@ -1,8 +1,10 @@
 [build]
   environment = { NODE_VERSION = "20" }
-  command = "npm run build"
+  command = "pnpm run build"
   publish = "build"
 
 [functions]
   node_bundler = "esbuild"
+
+[functions."*"]
   format = "esm"
