Improved tree; still broken on Safari -- will probably stay that way

--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
 		"@tailwindcss/container-queries": "^0.1.1",
 		"@tailwindcss/forms": "^0.5.10",
 		"@tailwindcss/typography": "^0.5.16",
+		"@types/d3": "^7.4.3",
 		"@types/d3-org-chart": "^3.1.2",
 		"@types/node": "^22.13.4",
 		"autoprefixer": "^10.4.20",
@@ -52,6 +53,7 @@
 		"@icons-pack/svelte-simple-icons": "^4.0.1",
 		"@netlify/functions": "^3.0.0",
 		"bson": "^6.10.2",
+		"d3": "^7.9.0",
 		"d3-org-chart": "^3.1.1",
 		"mongoose": "^8.9.6",
 		"svelte-device-info": "^1.0.6",
