--- a/package.json
+++ b/package.json
@@ -56,6 +56,7 @@
 		"d3": "^7.9.0",
 		"d3-org-chart": "^3.1.1",
 		"mongoose": "^8.9.6",
+		"platform-detect": "^3.0.1",
 		"svelte-device-info": "^1.0.6",
 		"svelte-persisted-store": "^0.12.0"
 	}
