--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
 		"@tailwindcss/typography": "^0.5.16",
 		"@types/d3": "^7.4.3",
 		"@types/d3-org-chart": "^3.1.2",
+		"@types/lodash": "^4.17.16",
 		"@types/node": "^22.13.4",
 		"autoprefixer": "^10.4.20",
 		"bits-ui": "1.0.0-next.87",
@@ -55,6 +56,7 @@
 		"bson": "^6.10.2",
 		"d3": "^7.9.0",
 		"d3-org-chart": "^3.1.1",
+		"lodash": "^4.17.21",
 		"mongoose": "^8.9.6",
 		"platform-detect": "^3.0.1",
 		"svelte-device-info": "^1.0.6",
