--- a/package.json
+++ b/package.json
@@ -60,6 +60,7 @@
 		"mongoose": "^8.9.6",
 		"platform-detect": "^3.0.1",
 		"svelte-device-info": "^1.0.6",
-		"svelte-persisted-store": "^0.12.0"
+		"svelte-persisted-store": "^0.12.0",
+		"uuid": "^11.1.0"
 	}
 }
