--- a/package.json
+++ b/package.json
@@ -10,7 +10,8 @@
 		"prepare": "svelte-kit sync || echo ''",
 		"check": "svelte-kit sync && svelte-check --tsconfig ./tsconfig.json",
 		"check:watch": "svelte-kit sync && svelte-check --tsconfig ./tsconfig.json --watch",
-		"lint": "eslint ."
+		"lint": "eslint .",
+		"grab-osrsbox-items": "bun run --env-file .env scripts/grab-osrsbox-items.ts"
 	},
 	"devDependencies": {
 		"@eslint/compat": "^1.2.5",
@@ -53,11 +54,14 @@
 	"dependencies": {
 		"@icons-pack/svelte-simple-icons": "^4.0.1",
 		"@netlify/functions": "^3.0.0",
+		"@types/bun": "^1.3.3",
 		"@wise-old-man/utils": "^3.3.8",
 		"bson": "^6.10.2",
+		"consola": "^3.4.2",
 		"d3": "^7.9.0",
 		"d3-org-chart": "^3.1.1",
 		"lodash": "^4.17.21",
+		"log-update": "^7.0.2",
 		"mongoose": "^8.9.6",
 		"platform-detect": "^3.0.1",
 		"svelte-device-info": "^1.0.6",
