--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
 	"devDependencies": {
 		"@eslint/compat": "^1.2.5",
 		"@eslint/js": "^9.19.0",
+		"@lucide/svelte": "^0.482.0",
 		"@sveltejs/adapter-netlify": "^4.4.1",
 		"@sveltejs/kit": "^2.16.1",
 		"@sveltejs/vite-plugin-svelte": "^5.0.3",
@@ -27,7 +28,7 @@
 		"@types/lodash": "^4.17.16",
 		"@types/node": "^22.13.4",
 		"autoprefixer": "^10.4.20",
-		"bits-ui": "1.0.0-next.87",
+		"bits-ui": "1.8.0",
 		"clsx": "^2.1.1",
 		"eslint": "^9.19.0",
 		"eslint-plugin-svelte": "^2.46.1",
@@ -64,6 +65,7 @@
 		"log-update": "^7.0.2",
 		"mongoose": "^8.9.6",
 		"platform-detect": "^3.0.1",
+		"services": "^0.0.3",
 		"svelte-device-info": "^1.0.6",
 		"svelte-persisted-store": "^0.12.0",
 		"uuid": "^11.1.0"
