--- a/package.json
+++ b/package.json
@@ -59,6 +59,7 @@
 		"@types/bun": "^1.3.3",
 		"@wise-old-man/utils": "^3.3.8",
 		"bson": "^6.10.2",
+		"cheerio": "^1.1.2",
 		"consola": "^3.4.2",
 		"d3": "^7.9.0",
 		"d3-array": "^3.2.4",
