--- a/package.json
+++ b/package.json
@@ -65,6 +65,7 @@
 		"d3-array": "^3.2.4",
 		"d3-org-chart": "^3.1.1",
 		"d3-scale": "^4.0.2",
+		"echarts": "^6.0.0",
 		"lodash": "^4.17.21",
 		"log-update": "^7.0.2",
 		"mongoose": "^8.9.6",
