--- a/package.json
+++ b/package.json
@@ -12,6 +12,8 @@
 		"check:watch": "svelte-kit sync && svelte-check --tsconfig ./tsconfig.json --watch",
 		"lint": "eslint .",
 		"grab-osrsbox-items": "bun run --env-file .env scripts/grab-osrsbox-items.ts",
+		"backfill-missing-items": "bun run --env-file .env scripts/backfill-missing-items.ts",
+		"populate-item-ingredient-trees": "bun run --env-file .env scripts/populate-ingredients.ts",
 		"update-item-prices": "bun run --env-file .env netlify/functions/update-item-prices.ts"
 	},
 	"devDependencies": {
