--- a/.prettierrc
+++ b/.prettierrc
@@ -4,5 +4,18 @@
     "svelteSortOrder": "options-scripts-markup-styles",
     "svelteIndentScriptAndStyle": true,
     "printWidth": 120,
-    "singleQuote": true
+    "singleQuote": true,
+    "plugins": [
+        "prettier-plugin-tailwindcss",
+        "prettier-plugin-svelte"
+    ],
+    "tailwindStylesheet": "./src/routes/layout.css",
+    "overrides": [
+        {
+            "files": "*.svelte",
+            "options": {
+                "parser": "svelte"
+            }
+        }
+    ]
 }
