--- a/package.json
+++ b/package.json
@@ -10,11 +10,12 @@
 		"prepare": "svelte-kit sync || echo ''",
 		"check": "svelte-kit sync && svelte-check --tsconfig ./tsconfig.json",
 		"check:watch": "svelte-kit sync && svelte-check --tsconfig ./tsconfig.json --watch",
-		"lint": "eslint .",
+		"lint": "eslint . && prettier --check .",
 		"grab-osrsbox-items": "bun run --env-file .env scripts/grab-osrsbox-items.ts",
 		"backfill-missing-items": "bun run --env-file .env scripts/backfill-missing-items.ts",
 		"populate-item-ingredient-trees": "bun run --env-file .env scripts/populate-ingredients.ts",
-		"update-item-prices": "bun run --env-file .env netlify/functions/update-item-prices.ts"
+		"update-item-prices": "bun run --env-file .env netlify/functions/update-item-prices.ts",
+		"format": "prettier --write ."
 	},
 	"devDependencies": {
 		"@eslint/compat": "^1.4.0",
@@ -34,11 +35,15 @@
 		"bits-ui": "1.8.0",
 		"clsx": "^2.1.1",
 		"eslint": "^9.39.1",
+		"eslint-config-prettier": "^10.1.8",
 		"eslint-plugin-svelte": "^3.13.0",
 		"formsnap": "^2.0.0",
 		"globals": "^16.5.0",
 		"lucide-svelte": "^0.474.0",
 		"mode-watcher": "^0.5.1",
+		"prettier": "^3.6.2",
+		"prettier-plugin-svelte": "^3.4.0",
+		"prettier-plugin-tailwindcss": "^0.7.1",
 		"sass-embedded": "^1.83.4",
 		"svelte": "^5.19.3",
 		"svelte-check": "^4.1.4",
