--- a/.prettierrc
+++ b/.prettierrc
@@ -9,7 +9,7 @@
         "prettier-plugin-tailwindcss",
         "prettier-plugin-svelte"
     ],
-    "tailwindStylesheet": "./src/routes/layout.css",
+    "tailwindConfig": "./tailwind.config.ts",
     "overrides": [
         {
             "files": "*.svelte",
