Add script to remove duplicate items from the database

--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
         "backfill-missing-items": "bun run --env-file .env scripts/backfill-missing-items.ts",
         "populate-item-ingredient-trees": "bun run --env-file .env scripts/populate-ingredients.ts",
         "update-item-prices": "bun run --env-file .env scripts/run-update-item-prices.ts",
+        "remove-duplicate-items": "bun run --env-file .env scripts/remove-duplicate-items.ts",
         "format": "prettier --write ."
     },
     "devDependencies": {
