--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
         "backup-items-master": "bun run --env-file .env scripts/backup-items-master.ts",
         "copy-osrsbox-to-dev": "OSRSBOX_SOURCE_DB=osrsbox OSRSBOX_TARGET_DB=osrsbox-dev bun run --env-file .env scripts/copy-osrsbox-db.ts",
         "copy-osrsbox-dev-to-prod": "OSRSBOX_SOURCE_DB=osrsbox-dev OSRSBOX_TARGET_DB=osrsbox-prod bun run --env-file .env scripts/copy-osrsbox-db.ts",
+        "update-db": "bun run --env-file .env scripts/update-db.ts",
         "compute-creation-tree-skills": "bun run --env-file .env scripts/compute-creation-tree-skills.ts",
         "format": "prettier --write ."
     },
